--- a/public/styles.css
+++ b/public/styles.css
@@ -8,28 +8,38 @@ html {
   background-color: rgb(218, 218, 218);
 }
 
-.flex-container {
+.flexbox-container {
   display: flex;
+  flex-wrap: wrap;
+  column-gap: 10px;
+  margin-top: 200px;
+  justify-content: center ;
   flex-direction: row;
-  column-gap: 1px;
-  margin: 200px 50px 10px;
+  
 }
 
-.container {
+.flexbox-item {
   margin: 10px;
-  width: 100%;
+  width: 500px;
+  height: 450px;
+  max-width: 500px;
+  border: 3px solid #333;
+  
 }
 
 .card {
   background: #F6F6F6;
-  border-radius: 30px;
+  text-align: justify;
+  border-radius: 20px;
   box-shadow: 0 2px 5px rgb(122, 122, 122, 0.7);
-  padding: 50px;
-  width: 75%;
-  margin: 10px auto;
-  height:  3rem;
+  padding: 30px;
+  height: 2.5rem;
+  margin: 10px;
 }
 
+.main-card {
+  height: 370px;
+}
 
 /* footer */
 
