--- a/public/styles.css
+++ b/public/styles.css
@@ -1,12 +1,17 @@
 * {
   padding: 0;
   margin: 0;
-
+  font-family: "Montserrat", sans-serif;
 }
 html {
-  font-family: "Montserrat", sans-serif;
   background-color: rgb(218, 218, 218);
 }
+
+h3 {
+  margin-top: 5rem;
+  color: rgb(145, 120, 90);
+}
+
 
 .flexbox-container {
   display: flex;
@@ -23,7 +28,7 @@ html {
   width: 500px;
   height: 450px;
   max-width: 500px;
-  border: 3px solid #333;
+  /* border: 3px solid #333; */
   
 }
 
@@ -37,6 +42,25 @@ html {
   margin: 10px;
 }
 
+.btn {
+  padding: 15px;
+  background-color: rgb(22, 49, 197);
+  color: white;
+  font-weight: bold;
+  border-radius: 10px;
+  border: none;
+  box-shadow: 0 2px 5px rgb(122, 122, 122, 0.7);
+}
+
+
+.btn-p {
+margin: -100px 200px;
+}
+.btn:hover{
+  background-color: rgb(35, 67, 245);
+
+
+}
 .main-card {
   height: 370px;
 }
@@ -54,3 +78,4 @@ footer {
 footer p {
   color: rgb(163, 163, 163);
 }
+
