--- a/public/styles.css
+++ b/public/styles.css
@@ -1,16 +1,13 @@
 * {
-  padding: 0;
-  margin: 0;
   font-family: "Montserrat", sans-serif;
+
 }
 html {
-  background-image: linear-gradient(315deg, #d5d6d6, #adb2b8);
-  background-attachment: fixed; 
-  background-size: cover;
+  background-image: linear-gradient(13deg, #d5d6d6, #adb2b8);
+  background-attachment: fixed;
 }
 
 h1 {
-  text-decoration: wavy;
   color: #1e1e1e;
   filter: blur(.5px);
 }
@@ -19,20 +16,22 @@ h3 {
   margin-top: 5rem;
   color: #0e39f8;
   filter: blur(.5px);
+  font-weight: unset;
 }
 
 .flexbox-container {
   display: flex;
   flex-wrap: wrap;
-  column-gap: 10px;
   margin-top: 200px;
-  justify-content: center ;
+  justify-content: center;
   flex-direction: row;
-  
 }
+
 .page-count{
   margin: 30% 45%;
   color: rgb(29, 28, 28);
+  filter: blur(0.6px);
+  font-weight: bold;
   filter: blur(0.6px);
 }
 
@@ -40,9 +39,7 @@ h3 {
   margin: 10px;
   width: 500px;
   height: 450px;
-
   /* border: 3px solid #333; */
-
 }
 
 .card {
@@ -69,25 +66,27 @@ h3 {
   padding: 30px;
   border: none;
   border-radius: 20px;
-  color: rgb(81, 19, 253);
+  color: #0e39f8;
   height: 2.5rem;
-  width: 382px;
+  width: 80%;
   text-align: justify;
-  font-weight: bold;
+  font-weight: unset;
   margin: 6px;
   box-shadow:  -7px -7px 14px #7d8187,
   7px 7px 14px #f5f3f3;
   cursor: pointer;
+  filter: blur(.5px);
 }
 
 #checkbox-button span:hover {
   color: #fff;
-  background-image: linear-gradient(to right, rgb(122, 108, 139), rgba(252, 167, 57, 0.836));
+  background-image: linear-gradient(to right, rgb(124, 52, 219), rgba(14, 49, 250, 0.836));
   font-weight: bold;
   transition: all .7s;
   box-shadow:  -7px -7px 14px #FFF,
   7px 7px 14px #7d8187;
-  transition: all 1s;
+  transition: all .5s;
+  border: none;
 }
 #checkbox-button input[type="radio"]:checked + span {
   background-image: linear-gradient(15deg, #3e5bff, #4960dd);
@@ -130,7 +129,7 @@ h3 {
 
 .btn-hide {
   padding: 15px;
-  background-color: #cdd4dd;
+  background-image: linear-gradient(315deg, #9f9aad, #c4c7c8);
   color: #7d8187;
   font-size: 1rem;
   font-weight: bold;
@@ -143,15 +142,95 @@ h3 {
 /* footer */
 
 footer {
-  position: absolute;
+  margin-top: 130px;
   text-align: center;
-  bottom: 0;
   width: 100%;
   height: 2.5rem;
 }
 
 footer p {
   color: rgb(218, 80, 16);
- 
+  font-weight: bolder;
 }
 
+@media screen and (max-width: 1061px ) {
+
+  h1 {
+    text-align: center;
+    color: #1e1e1e;
+    filter: blur(.5px);
+    font-size: 4.vw;
+  }
+
+  h3 {
+    font-size: 2.5vw;
+    margin-top: 8rem;
+    color: #0e39f8;
+    filter: blur(.5px);
+    padding: 2px 50px;
+    font-weight: unset;
+  }
+
+  .flexbox-container {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 10px;
+    justify-content: center;
+    flex-direction: row;
+  }
+
+  .page-count{
+    margin: 10% 47%;
+    color: rgb(29, 28, 28);
+    font-weight: bold;
+    filter: blur(0.6px);
+    font-size: 1.5vw;
+    justify-content: center;
+  }
+
+  .flexbox-item {
+    width: 75%;
+    /* border: 3px solid #333; */
+  }
+
+  .card {
+    padding: 30px;
+    height: 23rem;
+  }
+
+  #checkbox-button span {
+    height: 2.5rem;
+    width: 82%;
+    text-align: center;
+    font-size: 1.8vw;
+    padding: 30px 60px;
+  }
+  
+  .btn-p {
+    margin: 70% 37%;
+  }  
+
+  .btn {
+    color: rgb(29, 28, 28);
+    font-size: 1.5rem;
+    filter: blur(.4px);
+    width: 180px;
+  }
+
+  .btn-hide {
+    background-image: linear-gradient(315deg, #9f9aad, #c4c7c8);
+    font-size: 1.5rem;
+    width: 180px;
+    filter: blur(.4px);
+  }
+
+}
+
+@media screen and (max-width: 800px){
+
+
+}
+
+@media screen and (max-width: 600px) {
+
+}
