[Fix] Updated responsiveness for cards and boxes.

--- a/public/styles.css
+++ b/public/styles.css
@@ -153,7 +153,7 @@ footer p {
   font-weight: bolder;
 }
 
-@media screen and (max-width: 1061px ) {
+@media all and (max-width: 1078px ) {
 
   h1 {
     text-align: center;
@@ -172,24 +172,17 @@ footer p {
   }
 
   .flexbox-container {
-    display: flex;
-    flex-wrap: wrap;
-    margin-top: 10px;
-    justify-content: center;
-    flex-direction: row;
+    margin-top: 25px;
   }
 
   .page-count{
     margin: 10% 47%;
-    color: rgb(29, 28, 28);
-    font-weight: bold;
-    filter: blur(0.6px);
     font-size: 1.5vw;
     justify-content: center;
   }
 
   .flexbox-item {
-    width: 75%;
+    width: 95%;
     /* border: 3px solid #333; */
   }
 
@@ -200,7 +193,7 @@ footer p {
 
   #checkbox-button span {
     height: 2.5rem;
-    width: 82%;
+    width: 85%;
     text-align: center;
     font-size: 1.8vw;
     padding: 30px 60px;
@@ -226,7 +219,7 @@ footer p {
 
 }
 
-@media screen and (max-width: 800px){
+@media screen and (max-width: 978px){
 
 
 }
