--- a/public/styles.css
+++ b/public/styles.css
@@ -50,7 +50,6 @@ h3 {
   box-shadow:  -7px -7px 14px #7d8187,
   7px 7px 14px #e4e3e3;
   padding: 30px;
-  height: 2.5rem;
   margin: 5px;
   border: none;
   height: 382px;
@@ -159,12 +158,12 @@ footer p {
     text-align: center;
     color: #1e1e1e;
     filter: blur(.5px);
-    font-size: 5vw;
+    font-size: 6vw;
   }
 
   h3 {
-    font-size: 2.5vw;
-    margin-top: 7vw;
+    font-size: 3.5vw;
+    margin-top: 11vw;
     color: #0e39f8;
     filter: blur(.5px);
     padding: 2px 50px;
@@ -173,6 +172,7 @@ footer p {
 
   .flexbox-container {
     margin-top: 25px;
+    row-gap: 150px;
   }
 
   .page-count{
@@ -189,19 +189,19 @@ footer p {
 
   .card {
     padding: 30px;
-    height: 23rem;
+    height: 33rem;
   }
 
   #checkbox-button span {
     height: 2.5rem;
     width: 87%;
     text-align: center;
-    font-size: 1.8vw;
+    font-size: 2.5vw;
     padding: 30px 60px;
   }
   
   .btn-p {
-    margin: 55% 35%;
+    margin: 52% 30%;
   }  
 
   .btn {
@@ -209,13 +209,15 @@ footer p {
     color: rgb(29, 28, 28);
     font-size: 1.5rem;
     filter: blur(.4px);
-    width: 280px;
+    width: 380px;
+    height: 5.5rem;
   }
 
   .btn-hide {
     background-image: linear-gradient(315deg, #9f9aad, #c4c7c8);
     font-size: 1.5rem;
-    width: 280px;
+    width: 380px;
+    height: 5.5rem;
     filter: blur(.4px);
   }
 
