--- a/public/styles.css
+++ b/public/styles.css
@@ -141,7 +141,7 @@ h3 {
 /* footer */
 
 footer {
-  margin-top: 130px;
+  margin-top: 100px;
   text-align: center;
   width: 100%;
   height: 2.5rem;
@@ -162,8 +162,8 @@ footer p {
   }
 
   h3 {
-    font-size: 3.5vw;
-    margin-top: 11vw;
+    font-size: 4.5vw;
+    margin-top: 6vw;
     color: #0e39f8;
     filter: blur(.5px);
     padding: 2px 50px;
@@ -193,15 +193,15 @@ footer p {
   }
 
   #checkbox-button span {
-    height: 2.5rem;
-    width: 87%;
+    height: 4.9rem;
+    width: 86%;
     text-align: center;
-    font-size: 2.5vw;
+    font-size: 3.3vw;
     padding: 30px 60px;
   }
   
   .btn-p {
-    margin: 52% 30%;
+    margin: 75% 30%;
   }  
 
   .btn {
@@ -220,6 +220,15 @@ footer p {
     height: 5.5rem;
     filter: blur(.4px);
   }
+
+  /* footer */
+
+footer {
+  margin-top: 300px;
+  text-align: center;
+  width: 100%;
+  height: 2.5rem;
+}
 
 }
 
