--- a/public/styles.css
+++ b/public/styles.css
@@ -138,6 +138,59 @@ h3 {
   align-items: center;
   filter: blur(.4px);
 }
+
+.result-page {
+  margin: 5% 25%;
+  background-image: linear-gradient(315deg, #c2c8ce, #c4c7c7);
+  display: block;
+  text-align: center;
+  border-radius: 20px;
+  box-shadow:  -7px -7px 14px #7d8187,
+  7px 7px 14px #e4e3e3;
+  padding: 30px;
+  border: none;
+ 
+}
+
+.result-page h1{
+  font-size: 3vw;
+  animation: glow 1s ease-in-out infinite alternate;
+}
+
+.result-page h2{
+  margin: 7%;
+  color:rgb(218, 80, 16) ;
+  
+}
+
+.result-page h3{
+  margin-top: 3%;
+  margin-bottom: 5%;
+}
+
+.result-page-btn {
+  margin-top: 3%;
+  margin-bottom: 3%;
+  padding: 15px;
+  background-color: rgb(218, 80, 16);
+  color: #d8d2d2;
+  font-size: 1rem;
+  font-weight: bold;
+  border-radius: 10px;
+  border: none;
+  box-shadow:  -7px -7px 14px #ffffff,
+  7px 7px 14px #7d8187;
+  width: 180px;
+  align-items: center;
+  filter: blur(.4px);
+  cursor: pointer;
+}
+
+.result-page-btn:hover {
+  background-color: rgb(81, 252, 195);
+  color: #3c555e;
+}
+
 /* footer */
 
 footer {
@@ -221,22 +274,53 @@ footer p {
     filter: blur(.4px);
   }
 
+  .result-page {
+    margin: 5% 5%;
+  }
+  
+  .result-page h1{
+    font-size: 6vw;
+    animation: glow 1s ease-in-out infinite alternate;
+  }
+  
+  .result-page h2{
+    margin: 10%;
+    color:rgb(218, 80, 16) ;
+    
+  }
+  
+  .result-page h3{
+    margin-top: 4%;
+    margin-bottom: 7%;
+  }
+
   /* footer */
 
-footer {
-  margin-top: 300px;
-  text-align: center;
-  width: 100%;
-  height: 2.5rem;
-}
+  footer {
+    margin-top: 200px;
+    text-align: center;
+    width: 100%;
+    height: 1.5rem;
+  }
 
 }
 
 @media screen and (max-width: 978px){
-
-
+  footer {
+    margin-top: 150px;
+  }
 }
 
 @media screen and (max-width: 600px) {
+
+}
+
+@keyframes glow {
+  from{
+  text-shadow: 0 0 10px #0fa, 0 0 20px #0fa, 0 0 30px #0fa, 0 0 40px #0fa,0 0 50px #0fa;
+}
+to {
+  text-shadow: 0 0 60px #0fa, 0 0 70px #0fa;
+}
 
 }
