--- a/public/styles.css
+++ b/public/styles.css
@@ -1,58 +1,54 @@
 * {
   font-family: "Montserrat", sans-serif;
-
 }
+
 html {
-  background-image: linear-gradient(13deg, #d5d6d6, #adb2b8);
-  background-attachment: fixed;
+  background-color: #262924;
 }
 
 h1 {
-  color: #1e1e1e;
+  color: rgb(218, 80, 16);
   filter: blur(.5px);
 }
 
 h3 {
-  margin-top: 5rem;
-  color: #0e39f8;
+  color: rgb(124, 137, 253);
   filter: blur(.5px);
   font-weight: unset;
+  margin-top: 5rem;
 }
 
 .flexbox-container {
   display: flex;
-  flex-wrap: wrap;
-  margin-top: 200px;
-  justify-content: center;
   flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-top: 200px;
 }
 
 .page-count{
-  margin: 30% 48%;
   color: rgb(218, 80, 16);
-  filter: blur(0.6px);
   font-weight: bold;
-  filter: blur(0.6px);
+  margin: 30% 48%;
 }
 
 .flexbox-item {
+  height: 450px;
   margin: 10px;
   width: 500px;
-  height: 450px;
-  /* border: 3px solid #333; */
 }
 
 .card {
-  background-image: linear-gradient(315deg, #c2c8ce, #c4c7c7);
+  background-color: #262924;
   display: inline-block;
-  text-align: justify;
-  border-radius: 20px;
-  box-shadow:  -7px -7px 14px #7d8187,
-  7px 7px 14px #e4e3e3;
-  padding: 30px;
-  margin: 5px;
   border: none;
+  border-radius: 20px;
+  box-shadow:  13px 15px 22px #0d0e0d,
+  -10px -6px 13px #4c5249;
   height: 382px;
+  margin: 5px;
+  padding: 30px;
+  text-align: justify;
 }
 
 #checkbox-button input[type="radio"] {
@@ -60,144 +56,148 @@ h3 {
 }
 
 #checkbox-button span {
-  background-image: linear-gradient(315deg, #c2c8ce, #c4c7c7);
-  display: inline-block;
-  padding: 30px;
+  background-color: #262924;
   border: none;
   border-radius: 20px;
-  color: #0e39f8;
-  height: 2.5rem;
-  width: 80%;
-  text-align: justify;
-  font-weight: unset;
-  margin: 6px;
-  box-shadow:  -7px -7px 14px #7d8187,
-  7px 7px 14px #f5f3f3;
+  box-shadow:  13px 15px 22px #0d0e0d,
+  -10px -6px 13px #4c5249;
+  color: rgb(111, 223, 186);
   cursor: pointer;
+  display: inline-block;
   filter: blur(.5px);
+  font-weight: unset;
+  height: 2.5rem;
+  margin: 6px;
+  padding: 30px;
+  text-align: justify;
+  width: 80%;
 }
 
 #checkbox-button span:hover {
   color: #fff;
-  background-image: linear-gradient(to right, rgb(124, 52, 219), rgba(14, 49, 250, 0.836));
-  font-weight: bold;
-  transition: all .7s;
-  box-shadow:  -7px -7px 14px #FFF,
-  7px 7px 14px #7d8187;
-  transition: all .5s;
+  background-image: linear-gradient(to right, rgb(111, 223, 186), rgb(124, 52, 219));
   border: none;
+  box-shadow:  -7px -7px 24px rgb(216, 214, 214),
+  7px 7px 24px rgb(216, 214, 214);
+  font-weight: bold;
+  transition: all .5s;
 }
+
 #checkbox-button input[type="radio"]:checked + span {
-  background-image: linear-gradient(15deg, #3e5bff, #4960dd);
+  background-image: linear-gradient(15deg, #3e5bff, #5867bd);
+  border: none;
+  box-shadow:  13px 15px 22px #0d0e0d,
+  -10px -6px 13px #4c5249;
   color: white;
   font-weight: bold;
-  border: none;
-  box-shadow:  -7px -7px 14px #2f3031,
-  7px 7px 15px #ffffff;
 }
 
 .btn-p {
   margin: -25% 37%;
-  }
+}
 
 .btn {
-  padding: 15px;
-  background-color: #cdd4dd;
-  color: #1e1e1e;
+  align-items: center;
+  background-image: linear-gradient(15deg, #3e5bff, #5867bd);
+  border: none;
+  border-radius: 10px;
+  box-shadow:  13px 15px 22px #0d0e0d,
+  -10px -6px 13px #4c5249;
+  color: white;
+  filter: blur(.4px);
   font-size: 1rem;
   font-weight: bold;
-  border-radius: 10px;
-  border: none;
-  box-shadow:  -7px -7px 14px #ffffff,
-  7px 7px 14px #7d8187;
-  width: 130px;
-  align-items: center;
-  filter: blur(.4px);
+  padding: 15px;
+  width: 130px; 
 }
 
 .btn:hover {
-  background-image: linear-gradient(to right, rgb(124, 52, 219), rgba(14, 49, 250, 0.836));
-  transition: all 0.5s;
-  cursor: pointer;
-
+  background-image: linear-gradient(to right, rgb(124, 52, 219), rgb(111, 223, 186));
+  box-shadow:  -6px -5px 17px rgb(216, 214, 214),
+  6px 5px 17px rgb(216, 214, 214);
   color: white;
-  box-shadow:  -7px -7px 14px #7d8187,
-  7px 7px 14px #ffffff;
-
+  cursor: pointer;
+  transition: all 0.5s;
 }
 
 .btn-hide {
-  padding: 15px;
-  background-image: linear-gradient(315deg, #9f9aad, #c4c7c8);
+  align-items: center;
+  background-color: #30332e;
   color: #7d8187;
+  filter: blur(.4px);
   font-size: 1rem;
   font-weight: bold;
-  border-radius: 10px;
   border: none;
+  border-radius: 10px;
+  padding: 15px;
   width: 130px;
-  align-items: center;
-  filter: blur(.4px);
+}
+
+.btn-hide:hover{
+  background-image: linear-gradient(315deg, #48515a, #52595f);
+  color: #242b33;
+  cursor: not-allowed;
 }
 
 .result-page {
-  margin: 5% 25%;
-  background-image: linear-gradient(315deg, #c2c8ce, #c4c7c7);
-  display: block;
-  text-align: center;
-  border-radius: 20px;
-  box-shadow:  -7px -7px 14px #7d8187,
-  7px 7px 14px #e4e3e3;
-  padding: 30px;
+  background-color: #262924;
   border: none;
- 
+  border-radius: 20px;
+  box-shadow:  13px 15px 22px #0d0e0d,
+  -10px -6px 13px #4c5249;
+  display: block;
+  margin: 5% 25%;
+  padding: 30px;
+  text-align: center;
 }
 
 .result-page h1{
-  font-size: 3vw;
   animation: glow 1s ease-in-out infinite alternate;
+  font-size: 3vw;
 }
 
 .result-page h2{
+  color:rgb(101, 166, 252) ;
   margin: 7%;
-  color:rgb(218, 80, 16) ;
-  
 }
 
 .result-page h3{
-  margin-top: 3%;
+  color: rgb(111, 223, 186);
   margin-bottom: 5%;
+  margin-top: 3%;
 }
 
 .result-page-btn {
-  margin-top: 3%;
-  margin-bottom: 3%;
-  padding: 15px;
-  background-color: rgb(218, 80, 16);
-  color: #d8d2d2;
-  font-size: 1rem;
-  font-weight: bold;
-  border-radius: 10px;
-  border: none;
-  box-shadow:  -7px -7px 14px #ffffff,
-  7px 7px 14px #7d8187;
-  width: 180px;
   align-items: center;
-  filter: blur(.4px);
+  background-image: linear-gradient(to right, rgb(124, 52, 219), rgb(111, 223, 186));
+  border: none;
+  border-radius: 10px;
+  box-shadow:  13px 15px 22px #0d0e0d,
+  -10px -6px 13px #4c5249;
+  color: #eeeded;
   cursor: pointer;
+  font-size: 1rem;
+  margin-bottom: 3%;
+  margin-top: 3%;
+  padding: 15px;
+  width: 180px;
 }
 
 .result-page-btn:hover {
-  background-color: rgb(81, 252, 195);
-  color: #3c555e;
+  background-image: linear-gradient(to right, rgb(111, 223, 186), rgb(124, 52, 219));
+  box-shadow:  -6px -5px 17px rgb(216, 214, 214),
+  6px 5px 17px rgb(216, 214, 214);
+  color: #e0e8eb;
 }
 
 /* footer */
 
 footer {
+  align-self: center;
+  height: 2.5rem;
   margin-top: 100px;
   text-align: center;
   width: 100%;
-  height: 2.5rem;
 }
 
 footer p {
@@ -208,19 +208,15 @@ footer p {
 @media all and (max-width: 1078px ) {
 
   h1 {
-    text-align: center;
-    color: #1e1e1e;
     filter: blur(.5px);
     font-size: 6vw;
+    text-align: center;
   }
 
   h3 {
     font-size: 4.5vw;
-    margin-top: 6vw;
-    color: #0e39f8;
-    filter: blur(.5px);
     padding: 2px 50px;
-    font-weight: unset;
+    margin-top: 6vw;
   }
 
   .flexbox-container {
@@ -229,49 +225,42 @@ footer p {
   }
 
   .page-count{
-    margin: 5% 49%;
     font-size: 2vw;
     justify-content: center;
-    color: rgb(218, 80, 16);
+    margin: 5% 49%;
   }
 
   .flexbox-item {
     width: 95%;
-    /* border: 3px solid #333; */
   }
 
   .card {
-    padding: 30px;
     height: 33rem;
+    padding: 30px;
   }
 
   #checkbox-button span {
+    font-size: 3.3vw;
     height: 4.9rem;
     width: 86%;
     text-align: center;
-    font-size: 3.3vw;
     padding: 30px 60px;
   }
   
   .btn-p {
-    margin: 75% 30%;
+    margin: 72% 29%;
   }  
 
   .btn {
-    display: block;
-    color: rgb(29, 28, 28);
     font-size: 1.5rem;
-    filter: blur(.4px);
-    width: 380px;
     height: 5.5rem;
+    width: 380px;
   }
 
   .btn-hide {
-    background-image: linear-gradient(315deg, #9f9aad, #c4c7c8);
     font-size: 1.5rem;
-    width: 380px;
     height: 5.5rem;
-    filter: blur(.4px);
+    width: 380px;
   }
 
   .result-page {
@@ -279,48 +268,53 @@ footer p {
   }
   
   .result-page h1{
-    font-size: 6vw;
     animation: glow 1s ease-in-out infinite alternate;
+    font-size: 6vw;
   }
   
   .result-page h2{
-    margin: 10%;
-    color:rgb(218, 80, 16) ;
-    
+    color:rgb(218, 80, 16);
+    margin: 10%; 
   }
   
   .result-page h3{
-    margin-top: 4%;
     margin-bottom: 7%;
+    margin-top: 4%;
   }
 
   /* footer */
 
   footer {
-    margin-top: 200px;
+    height: 8.5rem;
+    margin-top: 300px;
     text-align: center;
     width: 100%;
-    height: 1.5rem;
   }
 
 }
 
-@media screen and (max-width: 978px){
+@media screen and (max-width: 990px){
   footer {
-    margin-top: 150px;
+    margin-top: 40%;
   }
+
+  .btn-p {
+    margin: 80% 28%;
+  }  
 }
 
-@media screen and (max-width: 600px) {
-
+@media screen and (max-width: 875px) {
+  .btn-p {
+    margin: 85% 26%;
+  }  
 }
 
+/* Text Glow Animation */
 @keyframes glow {
-  from{
-  text-shadow: 0 0 10px #0fa, 0 0 20px #0fa, 0 0 30px #0fa, 0 0 40px #0fa,0 0 50px #0fa;
-}
-to {
+  from {
+    text-shadow: 0 0 10px #0fa, 0 0 20px #0fa, 0 0 30px #0fa, 0 0 40px #0fa,0 0 50px #0fa;
+  }
+  to {
   text-shadow: 0 0 60px #0fa, 0 0 70px #0fa;
-}
-
+  }
 }
